<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView style="@style/Screen">

        <LinearLayout style="@style/LL">

            <TextView
                android:id="@+id/tv_title"
                style="@style/Title"
                android:text="@string/statistics_title" />

            <androidx.cardview.widget.CardView style="@style/Card">

                <LinearLayout style="@style/LL">

                    <TextView
                        style="@style/ResultLabel"
                        android:text="@string/statistics_run_config_label" />

                    <TextView
                        android:id="@+id/tv_input_size"
                        style="@style/ResultText" />

                    <TextView
                        android:id="@+id/tv_iterations"
                        style="@style/ResultText" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/Card">

                <LinearLayout style="@style/LL">

                    <TextView
                        style="@style/ResultLabel"
                        android:text="@string/statistics_speedup_title" />

                    <TextView
                        android:id="@+id/tv_speedup"
                        style="@style/ResultText" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/Card">

                <LinearLayout style="@style/LL">

                    <TextView
                        style="@style/ResultLabel"
                        android:text="@string/statistics_sdk_wins" />

                    <ProgressBar
                        android:id="@+id/progress_sdk_wins"
                        style="@style/ProgressBar" />

                    <TextView
                        style="@style/ResultLabel"
                        android:text="@string/statistics_ndk_wins" />

                    <ProgressBar
                        android:id="@+id/progress_ndk_wins"
                        style="@style/ProgressBar" />

                    <TextView
                        android:id="@+id/tv_win_percentage"
                        style="@style/ResultText" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/Card">

                <LinearLayout style="@style/LL">

                    <TextView
                        style="@style/ResultLabel"
                        android:text="@string/statistics_avg_times_title" />

                    <TextView
                        android:id="@+id/tv_sdk_average"
                        style="@style/ResultText" />

                    <TextView
                        android:id="@+id/tv_ndk_average"
                        style="@style/ResultText" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_run_again"
                style="@style/PrimaryButton"
                android:text="@string/statistics_button_run_again" />

            <Button
                android:id="@+id/btn_back_home"
                style="@style/PrimaryButton"
                android:text="@string/statistics_button_back_home" />

        </LinearLayout>

    </ScrollView>

</layout>